--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #e0fcef;
 }
 
 code {
@@ -26,4 +27,10 @@ h3,
 ul {
   margin: 0;
   padding: 0;
+  list-style: none;
+}
+.Container {
+  width: 100%;
+  padding: 0 15px 0 15px;
+  margin: 0 auto;
 }
